Scrollbar styles and gallery fix

--- a/style/gallery.css
+++ b/style/gallery.css
@@ -9,6 +9,37 @@
 }
 
 #gallery img {
+}
+
+#gallery .gallery-thumbnails {
+  width: 100%;
+  height: 125px;
+  margin-bottom: 5px;
+  text-align: center;
+  background: rgba(172, 0, 0, 0.81);
+  border: 5px solid #ac0000;
+  white-space: nowrap;
+  overflow: scroll;
+  overflow-y: hidden;
+
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+
+  /* IE - scrollbar styles (Fuck IE) */
+  scrollbar-base-color: #a5a5a5;
+  scrollbar-face-color: #ccc;
+}
+
+#gallery .gallery-thumbnails::-webkit-scrollbar {
+  width: 12px;
+}
+
+#gallery .gallery-thumbnails::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px #a5a5a5;
+
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -16,22 +47,18 @@
   border-radius: 5px;
 }
 
-#gallery .gallery-thumbnails {
-  width: 100%;
-  height: 150px;
-  margin-bottom: 5px;
-  text-align: center;
-  background: rgba(172, 0, 0, 0.81);
-  overflow: scroll;
+#gallery .gallery-thumbnails::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px #ccc;
 
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-  border-radius: 10px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
 }
 
 #gallery .gallery-thumbnails img {
+  display: inline;
   width: auto;
   height: 90px;
   margin: 5px;
